- 2020-10-26: Supply options to aircast using environment variables
- 2020-10-24: Update to airupnp v0.2.28.1
- 2020-10-23: Update to airupnp v0.2.28.0
              Add support for setting MAX_PLAYERS (default=32)
- 2020-07-13: Simple experimental support for aircast inclusion
- 2020-06-06: Reduce default logging levels
- 2020-06-04: Add SUPPRESS_FLUSH option and customised binary
- 2020-05-28: Update to airupnp v0.2.26.1
- 2020-05-27: Update to airupnp v0.2.26.0
- 2020-05-05: Update to airupnp v0.2.25.0
- 2020-04-19: Add device model S15 to included players
- 2020-04-17: Update to airupnp v0.2.24.7
- 2020-04-07: Update to airupnp v0.2.24.6
- 2020-03-16: Update to airupnp v0.2.24.5
- 2020-03-07: Update to airupnp v0.2.24.4
- 2020-02-24: Update to airupnp v0.2.24.2
- 2020-02-11: Update to airupnp v0.2.24.1
- 2020-01-06: Update to airupnp v0.2.24.0
- 2020-01-04: Update to airupnp v0.2.23.0 (mDNS change)
- 2019-11-11: Update to AirConnect v0.2.22.1
              Use -o option so that _only_ specific Sonos devices are included
              Specify base image as Raspbian:Stretch
- 2019-10-05: Update to AirConnect v0.2.21.3
- 2019-09-30: Update to AirConnect v0.2.21.2
- 2019-09-18: Update to AirConnect v0.2.20.0
- 2019-08-31: Update to AirConnect v0.2.13.1
- 2019-08-21: Update to AirConnect v0.2.12.0
- 2019-07-05: Add ability to change config using environment variables
- 2019-06-03: Update to v0.2.10.2 (No known functional changes for airupnp)
- 2019-05-25: Update to v0.2.10.1 (No known functional changes)
- 2019-05-09: Update to v0.2.10 (No relevant functional changes)
- 2019-04-21: Restore input buffer to 1000ms
- 2019-04-21: Update to v0.2.9.0 (Note: no functional changes to airupnp; aircast only)
              Halve the buffering delays 
- 2019-03-17: Update to v0.2.8.0 (Note: reports as v0.2.7.0)
- 2019-03-03: Update to v0.2.6.0. Add exclusion for all Sonos Airplay 2 speakers
- 2019-02-04: Update to v0.2.4.0. Add exclusion for some Sonos Airplay 2 speakers