@@ -1,3 +1,4 @@
+- 2020-10-27: Update to AirConnect v0.2.28.3
 - 2020-10-26: Supply options to aircast using environment variables
 - 2020-10-24: Update to airupnp v0.2.28.1
 - 2020-10-23: Update to airupnp v0.2.28.0
